--- a/CinemaCity.vcxproj.filters
+++ b/CinemaCity.vcxproj.filters
@@ -15,22 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\source\repos\CinemaCity\CinemaCity\Bilet.h">
+    <ClInclude Include="Bilet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\source\repos\CinemaCity\CinemaCity\Film.h">
+    <ClInclude Include="Film.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\source\repos\CinemaCity\CinemaCity\Loc.h">
+    <ClInclude Include="Loc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\source\repos\CinemaCity\CinemaCity\Program.h">
+    <ClInclude Include="Program.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\source\repos\CinemaCity\CinemaCity\Sala.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CinemaCity.h">
+    <ClInclude Include="Sala.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
